exports[`test fails with no buttonText 1`] = `"received is not a function"`;

exports[`test fails with no props 1`] = `"received is not a function"`;

exports[`test renders correctly 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "flexDirection": "row-reverse",
    }
  }>
  <TouchableHighlight
    activeOpacity={0.85}
    onPress={[Function]}
    underlayColor="#ffffff">
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#8B5E3C",
            "borderColor": "#000000",
            "borderRadius": 10,
            "flex": -1,
            "flexDirection": "row",
            "justifyContent": "center",
            "margin": 15,
            "padding": 15,
          },
          Object {
            "margin": 12,
          },
          null,
          null,
        ]
      }>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#ffffff",
            },
            Object {
              "fontSize": 12,
            },
          ]
        }>
        Test
      </Text>
    </View>
  </TouchableHighlight>
</View>
`;

exports[`test renders correctly with button size 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "flexDirection": "row-reverse",
    }
  }>
  <TouchableHighlight
    activeOpacity={0.85}
    onPress={[Function]}
    underlayColor="#ffffff">
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#8B5E3C",
            "borderColor": "#000000",
            "borderRadius": 10,
            "flex": -1,
            "flexDirection": "row",
            "justifyContent": "center",
            "margin": 15,
            "padding": 15,
          },
          Object {
            "margin": 12,
          },
          null,
          null,
        ]
      }>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#ffffff",
            },
            Object {
              "fontSize": 18,
            },
          ]
        }>
        Test
      </Text>
    </View>
  </TouchableHighlight>
</View>
`;
